# ecland

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bundle.yml
.github/: cmake-add-fortran-flags.cmake  cmake-flags-intel-classic.cmake
.github/tools/: install-hdf5.sh  install-mpi.sh  install-netcdf-c.sh  install-netcdf-fortran.sh
.github/workflows/: build-hpc.yml  build.yml
cmake/: ecland-import.cmake.in  ecland_compile_flags.cmake  ecland_dp-import.cmake.in  ecland_fetchcontent_dependencies.cmake  ecland_fetchcontent_ecbuild.cmake  ecland_macros.cmake  ecland_source_file_compile_flags.cmake  project_summary.cmake
doc/: README.md  config_file
namelists/: namelist_cmf_48R1  namelist_ecland_48R1  namelist_ecland_50R1_ctl
share/: CMakeLists.txt
share/ecland/: CMakeLists.txt
share/ecland/scripts/: ecland-launch  ecland_create_namelist.py  ecland_extract_stats.py  ecland_parse_commandline.sh  ecland_retrieve.sh  ecland_run_experiment.sh  ecland_run_model.sh  ecland_run_test.sh  ecland_runtime.sh  ecland_validate.sh  ecland_validate_stats.py
src/: CMakeLists.txt
src/programs/: CMakeLists.txt  ecland.in
src/surf/: .pre-commit-config.yaml  CMakeLists.txt  cmflood.cmake  ecland_loki.config  loki.cmake  offline_driver.cmake  offline_util.cmake  surf.cmake
src/surf/cmflood/: cmf_calc_diag_mod.F90  cmf_calc_fldstg_mod.F90  cmf_calc_outflw_mod.F90  cmf_calc_pthout_mod.F90  cmf_ctrl_damout_mod.F90  cmf_ctrl_forcing_mod.F90  cmf_ctrl_levee_mod.F90  cmf_ctrl_maps_mod.F90  cmf_ctrl_mpi_mod.F90  cmf_ctrl_nmlist_mod.F90  cmf_ctrl_output_mod.F90  cmf_ctrl_physics_mod.F90  cmf_ctrl_restart_mod.F90  cmf_ctrl_tracer_mod.F90  cmf_ctrl_vars_mod.F90  cmf_drv_advance_mod.F90  cmf_drv_control_mod.F90  cmf_opt_outflw_mod.F90  cmf_utils_mod.F90  yos_cmf_input.F90  yos_cmf_map.F90
src/surf/function/: fcsttre.h  fcsurf.h  fcsvdfs.h  fcz0.h  fcz0sice.h  fcz0wn.F90  fcz0wn.h
src/surf/interface/: surf_inq.h  surfbc.h  surfdeallo.h  surfexcdriver.h  surfexcdrivers.h  surfexcdriversad.h  surfexcdriverstl.h  surfpp.h  surfpps.h  surfppsad.h  surfppstl.h  surfrad.h  surfseb.h  surfsebs.h  surfsebsad.h  surfsebstl.h  surftstp.h  surftstps.h  surftstpsad.h  surftstpstl.h  surfws.h  susdp_deriv.h  susdp_dflt.h  susurf.h
src/surf/make/: osm.cfg
src/surf/make/cfg/: gnu-opt.cfg
src/surf/module/: .vsurf_mod.F90.swp  .vupdz0_mod.F90.swp  abort_surf_mod.F90  bvoc_emis_mod.F90  canalb_mod.F90  ccetr_mod.F90  cotwo_mod.F90  cotworestress_mod.F90  cptave_mod.F90  ecphys_aux_diag_type_mod.F90  ecphys_aux_type_mod.F90  ecphys_flux_type_mod.F90  ecphys_state_type_mod.F90  ecphys_surface_type_mod.F90  farquhar_mod.F90  fcz0wn_mod.F90  flake_driver_mod.F90  flakeene_mod.F90  flakerad_mod.F90  kpp_abk80_mod.F90  kpp_bldepth_mod.F90  kpp_blmix_mod.F90  kpp_cpsw_mod.F90  kpp_interior_mix_mod.F90  kpp_kppmix_mod.F90  kpp_ocnint_mod.F90  kpp_swfrac_mod.F90  kpp_tridcof_mod.F90  kpp_tridmat_mod.F90  kpp_tridrhs_mod.F90  kpp_wscale_mod.F90  nitro_decline_mod.F90  oc_mlm_mod.F90  ocean_ml_driver_mod.F90  ocean_ml_driver_v2_mod.F90  source_e_mod.F90  sppcfl_mod.F90  sppcfls_mod.F90  sppcflsad_mod.F90  sppcflstl_mod.F90  (+142 more)
src/surf/offline/: cmfld1s.F90  master1s.F90
src/surf/offline/driver/: .dattim.F90.swp  buffer_utils.F90  callpar1s.F90  callpar1s_layer.F90  cnt01s.F90  cnt21s.F90  cnt31s.F90  cnt41s.F90  cntend.F90  cpg1s.F90  cpg1s_parallel.F90  dattim.F90  dtforc.F90  ecland_atmo_type_mod.F90  ecland_aux_diag_type_mod.F90  ecland_aux_type_mod.F90  ecland_climate_type_mod.F90  ecland_ddh_type_mod.F90  ecland_drv.F90  ecland_fc_mod.F90  ecland_fc_unsplit_mod.F90  ecland_flux_type_mod.F90  ecland_gems_type_mod.F90  ecland_internal_type_mod.F90  ecland_state_type_mod.F90  ecland_surf_local_type_mod.F90  ecland_surface_type_mod.F90  ibm.F90  incdat.F90  minmax.F90  netcdf_utils.F90  parkind1.F90  ptrgp1s.F90  ptrgpd1s.F90  rdclim.F90  rdcoor.F90  rdfvar.F90  rdnml_params.F90  rdres.F90  rdssdp.F90  (+81 more)
src/surf/offline/function/: fctast.h  fcttim.h  fcttre.h  fcttrm.h  fcvdfs.h
src/surf/offline/namelist/: nam1s.h  namct01s.h  namdim1s.h  namdyn1s.h  namforc1s.h  namgc1s.h  (+13 more)
tests/: CMakeLists.txt
tests/2D_EU-001_20220101-20220102/: namelist  setup
tests/ifsbench/: CMakeLists.txt  README.md  arch.yaml  cmf_diminfo.txt  ifsbench_run.py  namelist_2d_gl_t21  namelist_cmf_2d_gl_t21  namelist_v1_EU  pyproject.toml  reference.yaml  test.yaml  test_2d_gl_t21.yaml  test_v1_EU.yaml
tests/ifsbench/ifsbench_ecland/: __init__.py  ifsbench_run.py
tests/ifsbench/references/: reference_2d_gl_t21_cmf_dp.yaml  reference_2d_gl_t21_cmf_sp.yaml  reference_2d_gl_t21_nocmf_dp.yaml  reference_2d_gl_t21_nocmf_sp.yaml  reference_v1_EU_centered.yaml  reference_v1_EU_centered_sp.yaml  reference_v1_EU_default.yaml  reference_v1_EU_default_sp.yaml  reference_v1_EU_forward.yaml
tests/insitu_US-Ha1_1991-1996/: namelist  setup
tools/create_forcing/: .gitignore  CMakeLists.txt  README.md  config.yaml  config_2D.yaml  config_2D_gaussian.yaml  ecland_create_forcing.py  ecland_create_forcing_utils.py
tools/create_forcing/scripts/: concat_forcing.bash  create_sites.bash  extract_create_forcing.bash  extract_create_inicond_2D.bash  extract_create_inicond_2D_GG.bash  extract_forcing_cds.bash  extract_forcing_mars.bash  extract_site.bash  extract_site_clim.bash  prepare_basin_ini.bash  prepare_forcing_2D.bash  prepare_forcing_2D_GG.bash
tools/create_forcing/scripts/osm_pyutils/: cmflood_pylib.py  compute_forc_adjust_nc.py  convert_osm_forcing_grb2nc.py  create_sites.py  cython_ext.pyx  download_clim_cds.py  extract_process_cds.py  gen_inpmat.py  grb2nc_gaussian.py  iniclim_forcing_LL.py  interp_gg.py  interp_ll.py  process_site_var.py  sel_region.py  sel_region_point_forcing.py  setup_cython.py
tools/create_forcing/share/: gaussgr
tools/create_forcing/tests/: CMakeLists.txt  config_2D_cds.yaml  config_cds.yaml
tools/retrieve_data/: retrieve_sites.bash
tutorials/: .gitignore  clean.sh  ecland_practicals.ipynb  ecland_run_practicals.sh  plot_output.py  plot_utils.py
tutorials/namelists/: namelist_cmf_48R1  namelist_ecland_48R1
(+19 files in other folders)
